[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.13",
    "numpy",
    "pytest"
]

build-backend = "setuptools.build_meta"

[project]
name = "neworder"
version = "1.4.4"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENCE.md"}
description = "A dynamic microsimulation framework"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.5.0",
  "pandas-stubs",
  "scipy>=1.9.3",
  "matplotlib>=3.6.2"
]

[dependency-groups]
dev = [
  "pybind11>=2.10.3",
  "pytest>=7.1.3",
  "mypy>=1.5.0",
  "mypy-extensions>=1.0.0",
  "ruff",
  "mkdocs>=1.6.1",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-material>=9.6.14",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-video>=1.5.0",
  "requests>=2.32.4",
  "types-requests",
]

[project.optional-dependencies]
geospatial = [
  "networkx>3.0",
  "osmnx>=2.0.0",
  "geopandas>=0.12.2",
  "shapely>=2.0.0"
]

parallel = [
  "mpi4py>=3.0.3"
]



[project.urls]
"Homepage" = "https://neworder.readthedocs.io/"
"Bug Tracker" = "https://github.com/virgesmith/neworder/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]
filterwarnings = [
    "ignore:neworder installed in serial mode:RuntimeWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.mypy]
disallow_untyped_defs = "true"
plugins = "numpy.typing.mypy_plugin"
