[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.13",
    "numpy",
    "pytest"
]

build-backend = "setuptools.build_meta"

[project]
name = "neworder"
version = "1.5.2"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = "MIT"
license-files = ["LICENCE.md"]
description = "A dynamic microsimulation framework"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=2.3.3",
  "pandas-stubs",
  "scipy>=1.9.3",
  "matplotlib>=3.6.2",
]

[dependency-groups]
dev = [
  "pybind11>=2.10.3",
  "pytest>=9.0.3",
  "ruff",
  "zensical>=0.0.42",
  "requests>=2.34.2",
  "pybind11-stubgen>=2.5.5",
  "pre-commit>=4.5.1",
  "ty>=0.0.34",
]

[project.optional-dependencies]
geospatial = [
  "pyogrio>=0.12.0",
  "networkx>3.0",
  "osmnx>=2.0.0",
  "geopandas>=0.12.2",
  "shapely>=2.0.0"
]

parallel = [
  "mpi4py>=3.0.3"
]



[project.urls]
"Homepage" = "https://neworder.readthedocs.io/"
"Bug Tracker" = "https://github.com/virgesmith/neworder/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]
filterwarnings = [
    "ignore:neworder installed in serial mode:RuntimeWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ARG", "B", "C", "E", "F", "I", "N", "PERF", "PTH", "RUF", "SIM", "UP", "W"]
ignore = ["E501", "N803", "N806"]
